# OpenNI2-DepthSenseDriver

./: LICENSE  README.md
DepthSense/: CMakeLists.txt  DepthSenseDevice.cpp
DepthSenseDriver/: CMakeLists.txt  DepthSenseDevice.cpp  copy of DepthSenseDevice.cpp
